Stop "more >" from wrapping

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -53,6 +53,7 @@ liveblog-headlines {
       font-weight: bold;
       text-transform: uppercase;
       display: inline-block;
+      flex: none;
 
       @media @mobile-above {
         line-height: 33px;
